# 1905-analyzer

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXPLORATION.md  README.md  ROADMAP.md  fakeagent_test.pcap  pyproject.toml
.github/workflows/: ci.yml
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts  router.ts  shims-vue.d.ts
frontend/src/locales/: en.json  tr.json
frontend/src/views/: Home.vue
scripts/: live_handshake.py
src/ieee1905/: __init__.py  config.py  logging_setup.py  version.py
src/ieee1905/api/: app.py  auth.py
src/ieee1905/bridge/: __init__.py
src/ieee1905/cli/: main.py
src/ieee1905/conformance/: __init__.py  runner.py
src/ieee1905/core/: __init__.py  cmdu.py  fragmentation.py  message_types.py  tlv.py  tlv_types.py
src/ieee1905/core/tlvs/: __init__.py  _helpers.py  easymesh_r1.py  easymesh_r2.py  easymesh_r3.py  easymesh_r4.py  ieee1905_1.py  ieee1905_1_more.py
src/ieee1905/emulator/: __init__.py  _common.py  agent.py  controller.py  wsc.py
src/ieee1905/io/: __init__.py  backend.py  ethernet.py  interfaces.py  pcap.py  privilege.py
src/ieee1905/modify/: __init__.py
src/ieee1905/plugins/: __init__.py  registry.py
src/ieee1905/templates/: __init__.py  loader.py
src/ieee1905/templates/builtin/: ap_autoconfig_search.yaml  ap_capability_query.yaml  topology_discovery.yaml  topology_query.yaml
tests/: test_api.py  test_cli.py  test_cmdu.py  test_conformance.py  test_easymesh_r1.py  test_easymesh_r2.py  test_easymesh_r3.py  test_easymesh_r4.py  test_emulator.py  test_fragmentation.py  test_pcap_fixtures.py  test_phase3.py  test_profile2.py  test_replay.py  test_smoke.py  test_templates.py  test_tlv.py  test_tlv_more.py  test_wsc.py
tests/fixtures/: __init__.py  baseline_1905.pcap  build_baseline_pcap.py  build_easymesh_r1_pcap.py  build_easymesh_r2_pcap.py  build_easymesh_r3_pcap.py  build_easymesh_r4_pcap.py  easymesh_r1.pcap  easymesh_r2.pcap  easymesh_r3.pcap  easymesh_r4.pcap
tests/scenarios/: agent_client_association_event.yaml  agent_higher_layer_data_ack.yaml  agent_renew_resets_onboarded_state.yaml  agent_topology_query_response.yaml
